--- a/inventory/regionTwo/helm_vars/endpoints.yaml
+++ b/inventory/regionTwo/helm_vars/endpoints.yaml
@@ -89,7 +89,7 @@ oslo_db_session:
     user:
       username: grafana_session
       password: password
-# Credentials fro OS users
+# Credentials for OS users
 # If this vars used on slave region, 
 # ALL IDENTITY VARS MUST BE THE SAME AS IN MASTER REGION CONFIG (EXCEPT region_name)
 identity:
@@ -184,9 +184,9 @@ identity:
     test:
       role: admin
       region_name: "{{region}}"
-      username: test
+      username: rally
       password: password
-      project_name: test
+      project_name: rally
       user_domain_name: "{{service_domain}}"
       project_domain_name: "{{service_domain}}"
     gnocchi:
