--- a/roles/deploy_osh/defaults/main.yml
+++ b/roles/deploy_osh/defaults/main.yml
@@ -1,5 +1,4 @@
 ---
-
 redeploy_all: false
 service_domain: "default"
 test: true
@@ -22,12 +21,7 @@ prometheus:
   storage: '5Gi'
 alertmanager:
   storage: '5Gi'
-  
-glance:
-  pool_name: 'cloud.glance'
-  workers:
-    api: 1
-    registry: 1
+
 cinder:
   pool_name: 'cloud.cinder'
   backup_pool_name: 'cloud.cinder.backup'
@@ -43,7 +37,7 @@ neutron:
 nova:
   ephimeral_pool_name: 'cloud.nova.ephimeral'
 # available values: kvm, lxc, qemu, uml, xen, parallels
-  virt_type: qemu
+  virt_type: kvm
   cpu_mode: host-model
   workers:
     osapi_compute: 1
@@ -83,6 +77,25 @@ nova:
           ram: 16384
           disk: 0
           vcpus: 8
+glance:
+  pool_name: 'cloud.glance'
+  workers:
+    api: 1
+    registry: 1
+  bootstrap:
+    images:
+      cirros:
+        id: null
+        name: "Cirros 0.3.5 64-bit"
+        source_url: "http://download.cirros-cloud.net/0.3.5/"
+        image_file: "cirros-0.3.5-x86_64-disk.img"
+        min_disk: 1
+        image_type: qcow2
+        container_format: bare
+        private: true
+        properties:
+          hypervisor_type: "{{nova.virt_type}}"
+          os_distro: "cirros"
 placement:
   processes: 1
   threads: 4
