Change algoritm configure insterface. If you use vlan, you must set network name tag on parent insterface in MAAS Improve getting ip addres from maas controller in ansible dimanic inventory script

--- a/deploy_maas.yaml
+++ b/deploy_maas.yaml
@@ -10,7 +10,7 @@
 
 - hosts: maas
   roles:
-  - { role: prepare-node, stage: pre-k8s}
-  - bootstrap-os
-  - container-engine
-  - maas
+  - { role: prepare-node, stage: pre-k8s, tags: ['init', 'prepare']}
+  - { role: bootstrap-os, tags: ['init', 'docker']}
+  - { role: container-engine, tags: ['init', 'docker']}
+  - { role: maas, tags: ['maas']}
