--- a/deploy.yaml
+++ b/deploy.yaml
@@ -25,6 +25,7 @@
       import_tasks: roles/prepare-node/tasks/routes.yaml
       when: "cinder_backup_to_region != false"
       tags: 
+      - pre-k8s
       - routes
       - init
 
