--- a/roles/prepare-node/defaults/main.yml
+++ b/roles/prepare-node/defaults/main.yml
@@ -7,6 +7,10 @@ endpoints:
 packages:
  - ceph-common
  - ntp
+ - python3-pip
+ - jq
+pip_packages:
+ - yq
 # k8s node labels
 compute_plane_labels:
  - openstack-compute-node
